--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,19 @@
         <activity android:name=".fidelizacao.Activity.LoginActivity" />
         <activity
             android:name=".fidelizacao.Activity.SplashScreenActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity
-            android:name=".fidelizacao.Activity.MainActivity"
-            android:label="@string/title_activity_main"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".fidelizacao.Activity.MainActivity"
+            android:label="@string/title_activity_main"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
         <activity
             android:name=".fidelizacao.Activity.CadastroFidelizacaoActivity"
