--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.application'
 
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -18,24 +24,26 @@ android {
     }
 }
 
-dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.google.firebase:firebase-messaging:17.3.4'
-    implementation 'com.google.firebase:firebase-core:16.0.5'
-    implementation 'com.jjoe64:graphview:4.2.2'
-    //RecyclerView
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    // CardView
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    implementation 'com.google.code.gson:gson:2.8.5'
-}
 
-apply plugin: 'com.google.gms.google-services'
+
+    dependencies {
+        implementation fileTree(include: ['*.jar'], dir: 'libs')
+        implementation 'com.android.support:appcompat-v7:27.1.1'
+        implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+        implementation 'com.android.support:design:27.1.1'
+        implementation 'com.google.firebase:firebase-messaging:17.3.4'
+        implementation 'com.google.firebase:firebase-core:16.0.5'
+        implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
+        //RecyclerView
+        implementation 'com.android.support:recyclerview-v7:27.1.1'
+        // CardView
+        implementation 'com.android.support:cardview-v7:27.1.1'
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'com.android.support.test:runner:1.0.2'
+        androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+        implementation 'com.android.support:cardview-v7:27.1.1'
+        // https://mvnrepository.com/artifact/com.google.code.gson/gson
+        implementation 'com.google.code.gson:gson:2.8.5'
+    }
+
+    apply plugin: 'com.google.gms.google-services'
